--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -68,7 +68,7 @@ jobs:
 
         sudo $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
         
-        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/1.0.10/gstreamer-1.0-android-arm-1.0.10-release.tar.bz2 &&
+        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/1.14.5/gstreamer-1.0-android-universal-1.14.5.tar.bz2 &&
         mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
         tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
         
