--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -69,9 +69,8 @@ jobs:
         sudo $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
         
         wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/1.14.5/gstreamer-1.0-android-universal-1.14.5.tar.bz2 &&
-        mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
-        tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
-
+        mkdir gstreamer-1.0-android-universal-1.14.5 &&
+        tar xf gstreamer-1.0-android-universal-1.14.5.tar.bz2 -C gstreamer-1.0-android-universal-1.14.5
         
         if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
             wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
